@@ -66,6 +66,7 @@ HB_FUNC( WXMENUITEM_ENABLE )
   wxMenuItem:GetItemLabel
   Teo. Mexico 2008
 */
+#if wxVERSION > 20804
 HB_FUNC( WXMENUITEM_GETITEMLABEL )
 {
   wx_MenuItem* menuItem = (wx_MenuItem *) wxh_ItemListGet_WX( hb_stackSelfItem() );
@@ -73,11 +74,13 @@ HB_FUNC( WXMENUITEM_GETITEMLABEL )
   if( menuItem )
     wxh_retc( menuItem->GetItemLabel() );
 }
+#endif
 
 /*
   wxMenuItem:GetItemLabelText
   Teo. Mexico 2008
 */
+#if wxVERSION > 20804
 HB_FUNC( WXMENUITEM_GETITEMLABELTEXT )
 {
   wx_MenuItem* menuItem = (wx_MenuItem *) wxh_ItemListGet_WX( hb_stackSelfItem() );
@@ -85,3 +88,4 @@ HB_FUNC( WXMENUITEM_GETITEMLABELTEXT )
   if( menuItem )
     wxh_retc( menuItem->GetItemLabelText() );
 }
+#endif
