@@ -2,6 +2,18 @@
  *
  */
 
+2009-06-22 15:25 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  * include/wxHarbour/wxh.h
+    * defined wxVERSION ( seems that wxABI_VERSION doesn't contains 
+      wxRELEASE_NUMBER )
+
+  * src/common/sysdefs.cpp
+  * src/wxbase/controls/wx_ComboBox.cpp
+  * src/wxbase/menu/wx_MenuItem.cpp
+    * defined some conditionals to use wxWidgets version > 2.8.4
+    TODO: check the exactly version in which capabilities were
+          implemented
+
 2009-06-20 12:18 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * src/hrbcompat/misc/wxGET.prg
   * src/wxbase/controls/wx_TextCtrl.cpp
